<resources>
    <string name="app_name">HBL Savings</string>
    <string name="success">Success</string>
    <string name="oops">Oops</string>
    <string name="welcome">Welcome!</string>
    <string name="eligibilty_criteria">Eligibility Criteria</string>
    <string name="cnic">CNIC/NICOP/Pakistan Origin Card</string>
    <string name="active_bank_account">Active Bank Account/E-Wallet account in Pakistan</string>
    <string name="for_individual_accounts_only">For Individual Accounts only</string>
    <string name="minimum_documents_req">Minimum Documents Required</string>
    <string name="cnic_front_back">CNIC (Front &amp; Back)</string>
    <string name="cnic_copy">CNIC Copy / B-Form of the Nominee </string>
    <string name="prrof_of_income">Proof of Income</string>
    <string name="estimated_time_to_open_account">Estimated Time to Open Account</string>
    <string name="et_time">5 Minutes</string>
    <string name="continue1">Continue</string>
    <string name="regulatory_information">Regulatory Information</string>
    <string name="know_your_customer">Know Your Customer (KYC)</string>
    <string name="residential_status">Pakistan Residential Status</string>
    <string name="question_financial_institution">Has any financial institution ever refused to open your account? </string>
    <string name="next_of_kin">Next of Kin</string>
    <string name="full_name_as_per_cnic">FULL NAME AS PER CNIC</string>
    <string name="relationship">Relationship</string>
    <string name="share">Share %</string>
    <string name="cnic_nicop_bform">CNIC/NICOP/B-FORM NUMBER</string>
    <string name="cnic_nicop_issue_date">IDENTITY ISSUE DATE</string>
    <string name="cnic_nicop_expiry">CNIC/NICOP EXPIRY</string>
    <string name="upload_nominee_cnic">Upload Nominee CNIC</string>
    <string name="add_more_nominees">Add More Nominees</string>
    <string name="kyc_bracket">KYC</string>
    <string name="personal_info">Personal</string>
    <string name="professional_info">Professional</string>
    <string name="ban_account_info">Bank Details</string>
    <string name="rpq">RPQ</string>
    <string name="fatca">FATCA</string>
    <string name="preview">PREVIEW</string>
    <string name="crs">CRS</string>
    <string name="crs_title">CRS Declaration</string>
    <string name="reason">Reason</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="next_of_kin_info">Next Of Kin Details</string>
    <string name="product_selection">Product Selection</string>
    <string name="products">Products</string>
    <string name="funds_selection">Funds Selection</string>
    <string name="other_information">Other Information</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</string>
    <string name="select">Select</string>
    <string name="select_from_date_first">Please select From date first</string>
    <string name="rpq_score">RPQ SCORE</string>
    <string name="mutual_funds">Mutual Funds</string>
    <string name="other_funds">Other Funds</string>
    <string name="vps_voluntary_pension_scheme_funds">VPS (Voluntary Pension Scheme) Funds</string>
    <string name="document_checklist_small">Document Checklist</string>
    <string name="allocation_scheme_details">Allocation scheme details</string>
    <string name="vps_funds_description">Please select an option below and specify allocation percentages.</string>
    <string name="allocation_of_investment_tick_one">ALLOCATION OF INVESTMENT (TICK ONE)</string>
    <string name="high_volatility">High Volatility</string>
    <string name="equity_sub_fund">Equity Sub-Fund</string>
    <string name="debit_sub_fund">Debt Sub-Fund</string>
    <string name="money_market_sub_fund">Money Market Sub-Fund</string>
    <string name="medium_volatility">Medium Volatility</string>
    <string name="low_volatility">Low Volatility</string>
    <string name="lower_volatility">Lower Volatility</string>
    <string name="lifecycle_allocation">Lifecycle Allocation</string>
    <string name="customized_allocation_scheme">Customized Allocation Scheme</string>
    <string name="total">Total</string>
    <string name="bank_account_info">Bank Details</string>
    <string name="country_of_tax_residence">COUNTRY OF TAX RESIDENCE</string>
    <string name="tin_no">TIN NO</string>
    <string name="bank_account_number">IBAN</string>
    <string name="account_title">ACCOUNT TITLE</string>
    <string name="bank_name">BANK NAME</string>
    <string name="branch_name">BRANCH NAME</string>
    <string name="city">CITY</string>
    <string name="branch_city">BRANCH CITY</string>
    <string name="country">COUNTRY</string>
    <string name="country_of_birth">COUNTRY OF BIRTH</string>
    <string name="risk_profile_questionnaire">Risk Profile Questionnaire</string>
    <string name="age_in_year">AGE (IN YEARS)</string>
    <string name="risk_tolerence_level">RISK TOLERANCE LEVEL</string>
    <string name="current_monthly_savings">CURRENTLY MONTHLY SAVINGS</string>
    <string name="occupation">OCCUPATION</string>
    <string name="dividend_payout">DIVIDEND PAYOUT</string>
    <string name="investment_objective">INVESTMENT OBJECTIVES</string>
    <string name="knowledge_of_investment">KNOWLEDGE OF INVESTMENT</string>
    <string name="investment_horizon">INVESTMENT HORIZON</string>
    <string name="further_investment_intention">FOR FURTHER INVESTMENT I INTEND TO TAKE</string>
    <string name="incur_initial_loss">IF I INCUR SUBSTANTIAL INITIAL LOSS I WOULD</string>
    <string name="invest_keep_money">I USUALLY INVEST/KEEP MY MONEY IN</string>
    <string name="fatca_checklist">FATCA Declaration</string>
    <string name="multiple_nationalities">DO YOU HAVE MULTIPLE NATIONALITIES?</string>
    <string name="green_card">DO YOU CURRENTLY HOLD U.S GREEN CARD OR U.S PERMANENT RESIDENCY?</string>
    <string name="us_tax_resident">ARE YOU A TAX RESIDENT IN U.S?</string>
    <string name="overseas_contact_info">OVERSEAS/CARE-OF-CONTACT DETAILS</string>
    <string name="foreign_citizenship">FOREIGN CITIZENSHIP OR RESIDENCY</string>
    <string name="power_of_attorney">POWER OF ATTORNEY</string>
    <string name="transfer_funds">TRANSFER FUNDS TO AN ACCOUNT</string>
    <string name="foreign_citizenship_hint">Have you renounced your foreign citizenship or residency?</string>
    <string name="power_of_attorney_hint">Have you given power of attorney to any person residing overseas?</string>
    <string name="transfer_funds_hint">Have you given any standing instruction to transfer funds to an account in U.S?</string>
    <string name="w8ben_forms">W8BEN/W9 FORMS</string>
    <string name="w8ben_forms_hint">W8BEN/W9 forms submitted with date of submission?</string>
    <string name="date_of_submission">DATE OF SUBMISSION</string>
    <string name="designation">DESIGNATION</string>
    <string name="employer_name">ORGANIZATION/EMPLOYER/BUSINESS NAME</string>
    <string name="experience_in_year">TOTAL WORKING EXPERIENCE (YEARS)</string>
    <string name="source_of_income">SOURCE OF INCOME</string>
    <string name="public_figure_entity">PUBLIC FIGURE ENTITY</string>
    <string name="choose_currency">CHOOSE CURRENCY</string>
    <string name="avg_annual_income">AVERAGE ANNUAL INCOME</string>
    <string name="public_figure">PUBLIC FIGURE</string>
    <string name="upload_proof_of_income">Upload Proof Of Income</string>
    <string name="public_figure_desc">include Senior Govt. Officials, Senior Office Bearers of Public Sector Entities, Politicians</string>
    <string name="deal_high_value_items">Do you deal in high value items?</string>
    <string name="zakat_deduction">ZAKAT DEDUCTION</string>
    <string name="zakat_affidavit">Zakat Affidavit CZ-50</string>
    <string name="lorem_ipsum">lorem ipsum dolor</string>
    <string name="customer_information">Customer Information</string>
    <string name="full_name">FULL NAME</string>
    <string name="green_card_number">GREEN CARD NUMBER</string>
    <string name="address">ADDRESS</string>
    <string name="phone_no">PHONE NO.</string>
    <string name="disclaimers">Disclaimers and T&amp;Cs</string>
    <string name="disclaimer_heading">Disclaimers</string>
    <string name="document_checklist">DOCUMENT CHECKLIST</string>
    <string name="send_document_via_email">You may also send this document via email later on info@hblasset.com</string>
    <string name="not_yet">NOT YET</string>
    <string name="yes">YES</string>
    <string name="thank_you">THANK YOU</string>
    <string name="complete_steps">You have successfully completed the onboarding journey.</string>
    <string name="caution">Caution</string>
    <string name="account_title_mismatched_from_cnic_name">*Account Title mismatched from CNIC name</string>
    <string name="nationality1">NATIONALITY 01</string>
    <string name="nationality2">NATIONALITY 02</string>
    <string name="nationality3">NATIONALITY 03</string>
    <string name="account_information">Account Information</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_info_title">Personal</string>
    <string name="upload_front_back_cnic_label">Upload Identification Document</string>
    <string name="upload_front_cnic_label">Upload Front</string>
    <string name="upload_back_cnic_label">Upload Back</string>
    <string name="upload_bform">Upload B-Form</string>
    <string name="continue_btn_label">Continue</string>
    <string name="personal_info_label">Personal</string>
    <string name="professional_info_label">Professional</string>
    <string name="bank_account_info_label">Bank Details</string>
    <string name="send_otp_label">Send OTP</string>
    <string name="cnic_nicp_no_label">CNIC/NICOP No.</string>
    <string name="cnic_nicp_issue_date_label">CNIC/NICOP ISSUE DATE</string>
    <string name="cnic_nicp_expiry_label">IDENTITY EXPIRY DATE</string>
    <string name="name_as_per_cnic_label">NAME AS PER IDENTITY</string>
    <string name="father_spouse_name_label">FATHER/SPOUSE NAME</string>
    <string name="father_name_label">FATHER NAME</string>
    <string name="cnic_issue_label">CNIC ISSUE DATE</string>
    <string name="cnic_expiry_label">CNIC EXPIRY DATE</string>
    <string name="relationship_with_customer">Relationship with Customer</string>
    <string name="gender_label">GENDER</string>
    <string name="date_of_birth_label">DATE OF BIRTH</string>
    <string name="mother_maiden_name_label">MOTHER MAIDEN NAME</string>
    <string name="email_address_label">EMAIL ADDRESS</string>
    <string name="address_label">RESIDENTIAL ADDRESS</string>
    <string name="mailing_address_is_same_label">Mailing Address is same as Residential Address</string>
    <string name="mailing_address__label">MAILING ADDRESS</string>
    <string name="city_label">CITY</string>
    <string name="religion_label">Religion</string>
    <string name="country_label">COUNTRY</string>
    <string name="mobile_label">Mobile Number</string>
    <string name="mobile_error">Please enter a valid Mobile Number</string>
    <string name="mobile_ownership_label">MOBILE OWNERSHIP</string>
    <string name="mobile_ownership_info">Video call verification required</string>
    <string name="service_provider_bill_label">Service Provider Bill</string>
    <string name="otp_title_label">OTP VERIFICATION</string>
    <string name="otp_detail_label">An OTP (One Time Password) has\nbeen sent to </string>
    <string name="no">NO</string>
    <string name="tin_no_question">DO YOU HAVE A TIN NUMBER?</string>
    <string name="invest_btn_label">Invest</string>
    <string name="ok_btn_label">OK</string>
    <string name="cancle_btn_label">Cancel</string>
    <string name="dummy_bill_number_label">10 1234 123456 U</string>
    <string name="screen_shot_label"><u>Take ScreenShot</u></string>
</resources>