<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginHorizontal="15dp"
    android:id="@+id/bill_number_generator_dialog">


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/city_label"
                android:scaleType="fitXY"
                android:src="@drawable/ic_close_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/close_btn">

                <ImageView
                    android:id="@+id/title_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/city_label"
                    android:elevation="8dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_otp_icon" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/otp_title_label"
                android:textAlignment="center"
                android:textColor="@color/hbl_main_green"
                android:textSize="@dimen/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView7" />

            <TextView
                android:id="@+id/detail_msg_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/otp_detail_label"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/med_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_tv" />


            <TextView
                android:id="@+id/bill_number_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/bill_number_bg"
                android:drawableEnd="@drawable/ic_clipboard"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/dummy_bill_number_label"
                android:textColor="@color/yellow_theme"
                android:textSize="@dimen/heading2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_msg_tv" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/green_theme_btn"
                android:enabled="false"
                android:text="@string/cancle_btn_label"
                android:textColor="@color/hbl_main_green"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ok_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ok_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/green_theme_btn"
                android:text="@string/ok_btn_label"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancel_btn" />


            <TextView
                android:id="@+id/screenshot_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@drawable/button_states"
                android:text="@string/screen_shot_label"
                android:textColor="@color/hbl_main_green"
                android:textSize="@dimen/med_text_size1"
                app:layout_constraintBottom_toTopOf="@+id/invest_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bill_number_tv" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/invest_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@drawable/button_states"
                android:backgroundTintMode="src_in"
                android:text="@string/invest_btn_label"
                android:textColor="@color/white"
                android:textSize="@dimen/med_text_size1"
                android:textStyle="bold"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/screenshot_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>